--- a/style.css
+++ b/style.css
@@ -40,14 +40,10 @@ body {
     100% { opacity: 1; }
   }
 
-.m1 {
-    display: flex;
-    animation-name: slide, fade;
-    animation-duration: 1s; 
-    animation-fill-mode: forwards;
-}
-
     .m1 > h1 {
+        animation-name: slide, fade;
+        animation-duration: 1s; 
+        animation-fill-mode: forwards;
         display: flex;
         color: white;
         font-size: 30px;
@@ -84,6 +80,12 @@ body {
         animation-fill-mode: backwards;
     }
 
+    .serole {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
 
 
 .main-role {
@@ -95,7 +97,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 20px;
     animation-name: slide, fade;
     animation-duration: 1s; 
     animation-delay: 0.46s;
@@ -105,35 +107,30 @@ body {
 
 
 .clss {
-    display: flex;
-    padding: 18px;
+    padding: 10px;
 }
 
 .role {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     border-radius: 10px;
 }
 
-@media (max-width: 998px) {
+@media (max-width: 980px) {
     .role {
         display: flex;
         flex-direction: column;
-        scale: 20px;
     }
 }
 
 .user {
+    display: flex;
+    flex-direction: column;
     background-color: rgb(30, 30, 30);
     border-radius: 10px;
-    width: 200%;
-    min-width: 200px;
-    display: flex;
-    height: 290px;
-    padding-left: 10px;
-    padding-right: 10px;
+    width: 151px;
+    height: 230px;
+    padding-left: 5px;
+    padding-right: 5px;
     align-items: center;
     justify-content: center;
     box-shadow: 0px 7px;
@@ -147,27 +144,29 @@ body {
 .profile {
     display: flex;
     flex-direction: column;
-    width: fit-content;
     align-items: center;
-    justify-content: center;
 }
 
     .profile > a > img {
-        height: 100px;
-        width: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 70px;
+        width: 70px;
+        margin-right: 3px;
         object-fit:cover;
         border-radius: 100px;
         border: 1.39px solid white;
     }
 
-    .profile > h3 {
+    .profile > a > h3 {
         display: flex;
         justify-content: center;
-        align-items: center;
         padding-right: 8px;
+        font-size: 13px;
     }
 
-    .profile > h3 > a {
+    .profile > a {
         font-family:Arial, Helvetica, sans-serif;
         font-size: 16px;
         font-weight: bold;
@@ -183,11 +182,11 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 3px 5px 3px 5px;;
+            padding: 2px 5px 2px 5px;
             background-color: rgb(255, 255, 255);
             color: rgb(2, 2, 2);
             border-radius: 5px;
-            font-size: 10px;
+            font-size: 8px;
             cursor: default;
             background-image: url(/src/role/admin.gif);
             background-blend-mode: difference;
@@ -204,9 +203,9 @@ body {
             justify-content: center;
             background-color: rgb(1, 1, 1);
             color: rgb(255, 255, 255);
-            padding: 3px 5px 3px 5px;
+            padding: 2px 5px 2px 5px;
             border-radius: 5px;
-            font-size: 10px;
+            font-size: 8px;
             cursor: default;
             background-image: url(/src/role/owner.gif);
             animation-name: fade;
@@ -222,9 +221,9 @@ body {
             justify-content: center;
             background-color: rgb(255, 5, 5);
             color: rgb(255, 255, 255);
-            padding: 3px 5px 3px 5px;
+            padding: 2px 5px 2px 5px;
             border-radius: 5px;
-            font-size: 10px;
+            font-size: 8px;
             cursor: default;
             animation-name: fade;
             animation-duration: 1s; 
@@ -236,9 +235,9 @@ body {
         .badge-supporter {
             background: #d19e1d;
             color: rgb(0, 0, 0);
-            padding: 3px 5px 3px 5px;
+            padding: 2px 5px 2px 5px;
             border-radius: 5px;
-            font-size: 10px;
+            font-size: 8px;
             cursor: default;
             animation-name: fade;
             animation-duration: 1s; 
@@ -250,9 +249,9 @@ body {
         .badge-supervisor {
             background-color: rgb(118, 31, 31);
             color: rgb(255, 255, 255);
-            padding: 3px 5px 3px 5px;
+            padding: 2px 5px 2px 5px;
             border-radius: 5px;
-            font-size: 10px;
+            font-size: 8px;
             cursor: default;
             background-image: url(/src/asset/deco4.gif);
             background-attachment: fixed;
@@ -265,14 +264,11 @@ body {
         } 
 
         .badge-security {
-            display: flex;
-            align-items: center;
-            justify-content: center;
             background-color: rgb(255, 213, 0);
             color: rgb(255, 255, 255);
-            padding: 3px 5px 3px 5px;
+            padding: 2px 5px 2px 5px;
             border-radius: 5px;
-            font-size: 10px;
+            font-size: 8px;
             cursor: default;background-color: rgb(35, 2, 223);
             animation-name: fade;
             animation-duration: 1s; 
@@ -284,9 +280,9 @@ body {
         .badge-status {
             background-color: rgb(16, 16, 16);
             color: rgb(191, 191, 191);
-            padding: 3px 5px 3px 5px;
+            padding: 2px 5px 2px 5px;
             border-radius: 5px;
-            font-size: 10px;
+            font-size: 8px;
             cursor: default;
             background-image: url(/src/asset/deco1.gif);
             animation-name: slide, fade;
@@ -298,8 +294,8 @@ body {
 
 
 .supporter-title {
-    width: 100%;
-    height: 80vh;
+    background-color: rgb(14, 14, 14);
+    border-radius: 30px 30px 0px 0px;
 }
 
 .supporter-title > h2 {
@@ -307,13 +303,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 20px;
     animation-name: slide, fade;
     animation-duration: 1s; 
     animation-delay: 1.54s;
     animation-fill-mode:backwards;
     cursor: default;
-    padding-top: 90px;
+    padding-top: 50px;
 }
 
 .donation {
@@ -358,6 +354,19 @@ body {
     cursor: default;
 }
 
+.ter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
+}
+
+    .ter > a {
+        display: flex;
+        align-items: center;
+
+    }
+
 .warp-pfp {
     display: flex;
     justify-content: space-between;
@@ -370,14 +379,16 @@ body {
 
     .pfp {
         display: flex;
-
+        justify-content: center;
+        align-items: center;
     }
 
         .pfp > img {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             margin-left: 20px;
+            display: flex;
         }
 
 
@@ -388,6 +399,7 @@ body {
         z-index: 2;
         border-radius: 1px solid;
         cursor: default;
+        font-size: 13px;
     }
 
     .badge-crown {
@@ -396,10 +408,14 @@ body {
         padding-left: 5px;
     }
 
-    .badge-custom > img {
-        width: 19px;
-        height: 19px;
+    .badge-custom {
+        display: flex;
     }
+
+        .badge-custom > img {
+            width: 23px;
+            height: 19px;
+        }
 
     .badge-1 {
         display: flex;
@@ -518,59 +534,5 @@ body {
     width: 300px;
     height: 40px;
     border-radius: 10px;
-    cursor: default;
-}
-
-
-
-
-
-.halo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding-top: 180px;
-    animation-name: fade;
-    animation-duration: 1s; 
-    animation-delay: 0.20s;
-    animation-fill-mode:backwards;
-}
-
-.halo2 > h1 {
-    color: white;
-    display: flex;
-    cursor: default;
-}
-
-.hh2warp {
-    display: flex;
-}
-
-.hh1 {
-    display: flex;
-    padding-right: 5px;
-    color: white;
-    cursor: default;
-}
-
-.hh2 > a {
-    color: rgb(255, 255, 255);
-    font-weight: 700;
-    transition: all .3s ease-out;
-}
-
-.hh2 > a:hover {
-    color: rgb(255, 0, 0);
-}
-
-
-
-.floating {
-    display: flex;
-    position: fixed;
-    top: 700px;
-    left: 30px;
-    color: rgb(160, 160, 160);
     cursor: default;
 }
